Second commit to portfolio

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="block-2">
                             <img src="./img/estaticos_regadio/2.PNG" alt="">
                             <img src="./img/mapas_alquiler/2.PNG" alt="">
-                            <img src="./img/mapas_movilidad/1.PNG" alt="">
+                            <img src="./img/mapas_movilidad/1.png" alt="">
                     </div>
                 </div>
         </section>
